@@ -471,6 +471,7 @@ void AqlFunctionFeature::addMiscFunctions() {
   add({"PARSE_IDENTIFIER", ".", flags, &Functions::ParseIdentifier});
   add({"IS_SAME_COLLECTION", ".h,.h", flags, &Functions::IsSameCollection});
   add({"DECODE_REV", ".", flags, &Functions::DecodeRev});
+  add({"SHARD_ID", ".h|.", flags, &Functions::ShardId});
 
   // only function without a C++ implementation
   add({"V8", ".", Function::makeFlags(FF::Deterministic, FF::Cacheable),
