@@ -733,6 +733,246 @@ function ahuacatlMiscFunctionsTestSuite () {
         assertEqual({ date: parts[1], count: parts[2] }, result[0], parts);
       });
     },
+
+    testShardId : function() {
+      const isCluster = require("@arangodb/cluster").isCluster();
+
+      try {
+        var cl = db._create("cl");
+        var sid = db._query('RETURN SHARD_ID("cl", {})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          assertEqual(sid._documents[0], db.cl.shards()[0]);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a"]});
+        var d = db.cl.insert({});
+        var sid = db._query('RETURN SHARD_ID("cl", {"_key":"'+d._key+'"})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a"]});
+        var d = db.cl.insert({});
+        var sid = db._query('RETURN SHARD_ID("cl", {})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a"]});
+        var d = db.cl.insert({});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":null})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a", "b"]});
+        var d = db.cl.insert({});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":null})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a", "b"]});
+        var d = db.cl.insert({});
+        var sid = db._query('RETURN SHARD_ID("cl", {"b":null})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a", "b"]});
+        var d = db.cl.insert({});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":null,"b":null})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a"]});
+        var val = 3;
+        var d = db.cl.insert({"a":val});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":'+val+'})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a"]});
+        var val = "Pi";
+        var d = db.cl.insert({"a":val});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":"'+val+'"})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a"]});
+        var val = 3.1415926535897932384626433832795028841971693993751058209749445923078164062;
+        var d = db.cl.insert({"a":val});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":'+val+'})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a", "b"]});
+        var val = 3;
+        var d = db.cl.insert({"a":val});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":'+val+'})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a", "b"]});
+        var val = "Pi";
+        var d = db.cl.insert({"a":val});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":"'+val+'"})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a", "b"]});
+        var val = 3.1415926535897932384626433832795028841971693993751058209749445923078164062;
+        var d = db.cl.insert({"a":val});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":'+val+'})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a", "b"]});
+        var vala = 3;
+        var valb = "Pi"
+        var d = db.cl.insert({"a":vala,"b":valb});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":'+vala+',"b":"'+valb+'"})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a", "b"]});
+        var vala = "Pi";
+        var valb = 3.1415926535897932384626433832795028841971693993751058209749445923078164062;
+        var d = db.cl.insert({"a":vala,"b":valb});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":"'+vala+'","b":'+valb+'})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+      try {
+        var cl = db._create("cl", {numberOfShards:3, shardKeys:["a", "b"]});
+        var vala = 3.1415926535897932384626433832795028841971693993751058209749445923078164062;
+        var valb = 3;
+        var d = db.cl.insert({"a":vala,"b":valb});
+        var sid = db._query('RETURN SHARD_ID("cl", {"a":'+vala+',"b":'+valb+'})');
+        if (!isCluster) {
+          assertEqual(sid._documents[0], "cl");
+        } else {
+          var counts = db.cl.count(true);
+          assertEqual(counts[sid._documents[0]], 1);
+        }
+      } finally {
+        db.cl.drop();
+      }
+
+    },
+
   };
 
 } // ahuacatlMiscFunctionsTestSuite
