@@ -1,6 +1,8 @@
 devel
 -----
 
+* Added new AQL function SHARD_ID.
+
 * Improved performance in replication dump protocol by inserting arrays of 
   documents instead of one document at a time and also not retrieving the
   document revision field when not needed.
